<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="10dp"
    tools:context="app.ctrlsoftware.com.whatsapp.activity.ValidadorActivity">

    <RelativeLayout
        android:layout_width="348dp"
        android:layout_height="551dp"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/logoTelaValidadorId"
            android:layout_width="@dimen/largura_logo"
            android:layout_height="@dimen/altura_logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/txtValidacaoId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoTelaValidadorId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/validacao"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/tamanho_letra_subtitulo" />

        <TextView
            android:id="@+id/txtTextoValidacaoId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/txt_validacao"
            android:textAlignment="center"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/tamanho_letra_texto" />

        <EditText
            android:id="@+id/caixaCodigoValidacaoSmsId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTextoValidacaoId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/informar_codigo_validacao"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/textColorPrimary" />

        <Button
            android:id="@+id/btnValidarCodigoSmsId"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/caixaCodigoValidacaoSmsId"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_validar"
            android:textColor="@color/textColorPrimary" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
