<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.ctrlsoftware.com.whatsapp.activity.CadastroUsuarioActivity"
    android:background="@color/colorPrimary">


    <RelativeLayout
        android:layout_width="344dp"
        android:layout_height="551dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="113dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/usuario" />

        <EditText
            android:id="@+id/editCadNomeId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/cad_nome"
            android:inputType="textPersonName"
            android:text=""
            android:textAlignment="center"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/editCadEmailId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editCadNomeId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/cad_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/editCadSenhaId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editCadEmailId"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/cad_senha"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnCadastrarId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editCadSenhaId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_cadastrar"
            android:textColor="#ffffff" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
